_generated-doc/3.15/config/quarkus-vertx-http_quarkus.management.adoc
:summaryTableId: quarkus-vertx-http_quarkus-management
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus-management-enabled]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-enabled[`quarkus.management.enabled`]##

[.description]
--
Enables / Disables the usage of a separate interface/port to expose the management endpoints. If sets to `true`, the management endpoints will be exposed to a different HTTP server. This avoids exposing the management endpoints on a publicly available server.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus-management-auth-basic]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-basic[`quarkus.management.auth.basic`]##

[.description]
--
If basic auth should be enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_BASIC+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_BASIC+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus-management-auth-proactive]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-proactive[`quarkus.management.auth.proactive`]##

[.description]
--
If this is true and credentials are present then a user will always be authenticated before the request progresses. If this is false then an attempt will only be made to authenticate the user if a permission check is performed or the current user is required for some other reason.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PROACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PROACTIVE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus-management-ssl-client-auth]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-client-auth[`quarkus.management.ssl.client-auth`]##

[.description]
--
Configures the engine to require/request client authentication. NONE, REQUEST, REQUIRED


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CLIENT_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CLIENT_AUTH+++`
endif::add-copy-button-to-env-var[]
--
a|`none`, `request`, `required`
|`none`

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus-management-root-path]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-root-path[`quarkus.management.root-path`]##

[.description]
--
A common root path for management endpoints. Various extension-provided management endpoints such as metrics and health are deployed under this path by default.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_ROOT_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_ROOT_PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`/q`

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus-management-enable-compression]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-enable-compression[`quarkus.management.enable-compression`]##

[.description]
--
If responses should be compressed.

Note that this will attempt to compress all responses, to avoid compressing already compressed content (such as images) you need to set the following header:

Content-Encoding: identity

Which will tell vert.x not to compress the response.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_ENABLE_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_ENABLE_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus-management-enable-decompression]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-enable-decompression[`quarkus.management.enable-decompression`]##

[.description]
--
When enabled, vert.x will decompress the request's body if it's compressed.

Note that the compression format (e.g., gzip) must be specified in the Content-Encoding header in the request.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_ENABLE_DECOMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_ENABLE_DECOMPRESSION+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-vertx-http_quarkus-management-compression-level]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-compression-level[`quarkus.management.compression-level`]##

[.description]
--
The compression level used when compression support is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_COMPRESSION_LEVEL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_COMPRESSION_LEVEL+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx-http_quarkus-management-auth-roles-mapping-role-name]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-roles-mapping-role-name[`quarkus.management.auth.roles-mapping."role-name"`]##

[.description]
--
Map the `SecurityIdentity` roles to deployment specific roles and add the matching roles to `SecurityIdentity`.

For example, if `SecurityIdentity` has a `user` role and the endpoint is secured with a 'UserRole' role, use this property to map the `user` role to the `UserRole` role, and have `SecurityIdentity` to have both `user` and `UserRole` roles.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_ROLES_MAPPING__ROLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_ROLES_MAPPING__ROLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,List<String>>
|

a| [[quarkus-vertx-http_quarkus-management-port]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-port[`quarkus.management.port`]##

[.description]
--
The HTTP port


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PORT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`9000`

a| [[quarkus-vertx-http_quarkus-management-test-port]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-test-port[`quarkus.management.test-port`]##

[.description]
--
The HTTP port


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_TEST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_TEST_PORT+++`
endif::add-copy-button-to-env-var[]
--
|int
|`9001`

a| [[quarkus-vertx-http_quarkus-management-host]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-host[`quarkus.management.host`]##

[.description]
--
The HTTP host

Defaults to 0.0.0.0

Defaulting to 0.0.0.0 makes it easier to deploy Quarkus to container, however it is not suitable for dev/test mode as other people on the network can connect to your development machine.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_HOST+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-host-enabled]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-host-enabled[`quarkus.management.host-enabled`]##

[.description]
--
Enable listening to host:port


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_HOST_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_HOST_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-credentials-provider]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-credentials-provider[`quarkus.management.ssl.certificate.credentials-provider`]##

[.description]
--
The `CredentialsProvider`. If this property is configured, then a matching 'CredentialsProvider' will be used to get the keystore, keystore key, and truststore passwords unless these passwords have already been configured.

Please note that using MicroProfile `ConfigSource` which is directly supported by Quarkus Configuration should be preferred unless using `CredentialsProvider` provides for some additional security and dynamism.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_CREDENTIALS_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_CREDENTIALS_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-credentials-provider-name]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-credentials-provider-name[`quarkus.management.ssl.certificate.credentials-provider-name`]##

[.description]
--
The credentials provider bean name.

This is a bean name (as in `@Named`) of a bean that implements `CredentialsProvider`. It is used to select the credentials provider bean when multiple exist. This is unnecessary when there is only one credentials provider available.

For Vault, the credentials provider bean name is `vault-credentials-provider`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_CREDENTIALS_PROVIDER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_CREDENTIALS_PROVIDER_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-files]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-files[`quarkus.management.ssl.certificate.files`]##

[.description]
--
The list of path to server certificates using the PEM format. Specifying multiple files requires SNI to be enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_FILES+++`
endif::add-copy-button-to-env-var[]
--
|list of path
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-files]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-files[`quarkus.management.ssl.certificate.key-files`]##

[.description]
--
The list of path to server certificates private key files using the PEM format. Specifying multiple files requires SNI to be enabled.

The order of the key files must match the order of the certificates.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_FILES+++`
endif::add-copy-button-to-env-var[]
--
|list of path
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-file]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-file[`quarkus.management.ssl.certificate.key-store-file`]##

[.description]
--
An optional keystore that holds the certificate information instead of specifying separate files.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--
|path
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-file-type]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-file-type[`quarkus.management.ssl.certificate.key-store-file-type`]##

[.description]
--
An optional parameter to specify the type of the keystore file. If not given, the type is automatically detected based on the file name.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-provider]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-provider[`quarkus.management.ssl.certificate.key-store-provider`]##

[.description]
--
An optional parameter to specify a provider of the keystore file. If not given, the provider is automatically detected based on the keystore file type.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-password]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-password[`quarkus.management.ssl.certificate.key-store-password`]##

[.description]
--
A parameter to specify the password of the keystore file. If not given, and if it can not be retrieved from `CredentialsProvider`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|`password`

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-password-key]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-password-key[`quarkus.management.ssl.certificate.key-store-password-key`]##

[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password of the key store file from `CredentialsProvider`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-alias]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-alias[`quarkus.management.ssl.certificate.key-store-alias`]##

[.description]
--
An optional parameter to select a specific key in the keystore. When SNI is disabled, and the keystore contains multiple keys and no alias is specified; the behavior is undefined.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-alias-password]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-alias-password[`quarkus.management.ssl.certificate.key-store-alias-password`]##

[.description]
--
An optional parameter to define the password for the key, in case it is different from `key-store-password` If not given, it might be retrieved from `CredentialsProvider`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_ALIAS_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_ALIAS_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-alias-password-key]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-key-store-alias-password-key[`quarkus.management.ssl.certificate.key-store-alias-password-key`]##

[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password for the alias from `CredentialsProvider`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_ALIAS_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_KEY_STORE_ALIAS_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-file]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-file[`quarkus.management.ssl.certificate.trust-store-file`]##

[.description]
--
An optional trust store that holds the certificate information of the trusted certificates.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILE+++`
endif::add-copy-button-to-env-var[]
--
|path
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-files]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-files[`quarkus.management.ssl.certificate.trust-store-files`]##

[.description]
--
An optional list of trusted certificates using the PEM format. If you pass multiple files, you must use the PEM format.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILES+++`
endif::add-copy-button-to-env-var[]
--
|list of path
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-file-type]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-file-type[`quarkus.management.ssl.certificate.trust-store-file-type`]##

[.description]
--
An optional parameter to specify the type of the trust store file. If not given, the type is automatically detected based on the file name.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_FILE_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-provider]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-provider[`quarkus.management.ssl.certificate.trust-store-provider`]##

[.description]
--
An optional parameter to specify a provider of the trust store file. If not given, the provider is automatically detected based on the trust store file type.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-password]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-password[`quarkus.management.ssl.certificate.trust-store-password`]##

[.description]
--
A parameter to specify the password of the trust store file. If not given, it might be retrieved from `CredentialsProvider`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-password-key]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-password-key[`quarkus.management.ssl.certificate.trust-store-password-key`]##

[.description]
--
A parameter to specify a `CredentialsProvider` property key, which can be used to get the password of the trust store file from `CredentialsProvider`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PASSWORD_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_PASSWORD_KEY+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-cert-alias]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-trust-store-cert-alias[`quarkus.management.ssl.certificate.trust-store-cert-alias`]##

[.description]
--
An optional parameter to trust a single certificate from the trust store rather than trusting all certificates in the store.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_CERT_ALIAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_TRUST_STORE_CERT_ALIAS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-certificate-reload-period]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-certificate-reload-period[`quarkus.management.ssl.certificate.reload-period`]##

[.description]
--
When set, the configured certificate will be reloaded after the given period. Note that the certificate will be reloaded only if the file has been modified.

Also, the update can also occur when the TLS certificate is configured using paths (and not in-memory).

The reload period must be equal or greater than 30 seconds. If not set, the certificate will not be reloaded.

IMPORTANT: It's recommended to use the TLS registry to handle the certificate reloading.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_RELOAD_PERIOD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CERTIFICATE_RELOAD_PERIOD+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-vertx-http_quarkus-management-ssl-cipher-suites]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-cipher-suites[`quarkus.management.ssl.cipher-suites`]##

[.description]
--
The cipher suites to use. If none is given, a reasonable default is selected.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_CIPHER_SUITES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_CIPHER_SUITES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx-http_quarkus-management-ssl-protocols]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-protocols[`quarkus.management.ssl.protocols`]##

[.description]
--
Sets the ordered list of enabled SSL/TLS protocols.

If not set, it defaults to `"TLSv1.3, TLSv1.2"`. The following list of protocols are supported: `TLSv1, TLSv1.1, TLSv1.2, TLSv1.3`. To only enable `TLSv1.3`, set the value to `to "TLSv1.3"`.

Note that setting an empty list, and enabling SSL/TLS is invalid. You must at least have one protocol.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_PROTOCOLS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_PROTOCOLS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`TLSv1.3,TLSv1.2`

a| [[quarkus-vertx-http_quarkus-management-ssl-sni]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-ssl-sni[`quarkus.management.ssl.sni`]##

[.description]
--
Enables Server Name Indication (SNI), an TLS extension allowing the server to use multiple certificates. The client indicate the server name during the TLS handshake, allowing the server to select the right certificate.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_SSL_SNI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_SSL_SNI+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-tls-configuration-name]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-tls-configuration-name[`quarkus.management.tls-configuration-name`]##

[.description]
--
The name of the TLS configuration to use.

If not set and the default TLS configuration is configured (`quarkus.tls.++*++`) then that will be used. If a name is configured, it uses the configuration from `quarkus.tls.<name>.++*++` If a name is configured, but no TLS configuration is found with that name then an error will be thrown.

If no TLS configuration is set, and `quarkus.tls.++*++` is not configured, then, `quarkus.management.ssl` will be used.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_TLS_CONFIGURATION_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_TLS_CONFIGURATION_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-handle-100-continue-automatically]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-handle-100-continue-automatically[`quarkus.management.handle-100-continue-automatically`]##

[.description]
--
When set to `true`, the HTTP server automatically sends `100 CONTINUE` response when the request expects it (with the `Expect: 100-Continue` header).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_HANDLE_100_CONTINUE_AUTOMATICALLY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_HANDLE_100_CONTINUE_AUTOMATICALLY+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-limits-max-header-size]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-header-size[`quarkus.management.limits.max-header-size`]##

[.description]
--
The maximum length of all headers.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_HEADER_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_HEADER_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the MemorySize format]]
|`20K`

a| [[quarkus-vertx-http_quarkus-management-limits-max-body-size]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-body-size[`quarkus.management.limits.max-body-size`]##

[.description]
--
The maximum size of a request body.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_BODY_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_BODY_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the MemorySize format]]
|`10240K`

a| [[quarkus-vertx-http_quarkus-management-limits-max-chunk-size]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-chunk-size[`quarkus.management.limits.max-chunk-size`]##

[.description]
--
The max HTTP chunk size


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_CHUNK_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_CHUNK_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the MemorySize format]]
|`8192`

a| [[quarkus-vertx-http_quarkus-management-limits-max-initial-line-length]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-initial-line-length[`quarkus.management.limits.max-initial-line-length`]##

[.description]
--
The maximum length of the initial line (e.g. `"GET / HTTP/1.0"`).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_INITIAL_LINE_LENGTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_INITIAL_LINE_LENGTH+++`
endif::add-copy-button-to-env-var[]
--
|int
|`4096`

a| [[quarkus-vertx-http_quarkus-management-limits-max-form-attribute-size]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-form-attribute-size[`quarkus.management.limits.max-form-attribute-size`]##

[.description]
--
The maximum length of a form attribute.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_FORM_ATTRIBUTE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_FORM_ATTRIBUTE_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the MemorySize format]]
|`2048`

a| [[quarkus-vertx-http_quarkus-management-limits-max-form-fields]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-form-fields[`quarkus.management.limits.max-form-fields`]##

[.description]
--
Set the maximum number of fields of a form. Set to `-1` to allow unlimited number of attributes.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_FORM_FIELDS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_FORM_FIELDS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`256`

a| [[quarkus-vertx-http_quarkus-management-limits-max-form-buffered-bytes]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-form-buffered-bytes[`quarkus.management.limits.max-form-buffered-bytes`]##

[.description]
--
Set the maximum number of bytes a server can buffer when decoding a form. Set to `-1` to allow unlimited length


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_FORM_BUFFERED_BYTES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_FORM_BUFFERED_BYTES+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the MemorySize format]]
|`1K`

a| [[quarkus-vertx-http_quarkus-management-limits-max-parameters]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-parameters[`quarkus.management.limits.max-parameters`]##

[.description]
--
The maximum number of HTTP request parameters permitted for incoming requests.

If a client sends more than this number of parameters in a request, the connection is closed.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_PARAMETERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_PARAMETERS+++`
endif::add-copy-button-to-env-var[]
--
|int
|`1000`

a| [[quarkus-vertx-http_quarkus-management-limits-max-connections]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-connections[`quarkus.management.limits.max-connections`]##

[.description]
--
The maximum number of connections that are allowed at any one time. If this is set it is recommended to set a short idle timeout.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_CONNECTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_CONNECTIONS+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx-http_quarkus-management-limits-header-table-size]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-header-table-size[`quarkus.management.limits.header-table-size`]##

[.description]
--
Set the SETTINGS_HEADER_TABLE_SIZE HTTP/2 setting.

Allows the sender to inform the remote endpoint of the maximum size of the header compression table used to decode header blocks, in octets. The encoder can select any size equal to or less than this value by using signaling specific to the header compression format inside a header block. The initial value is `4,096` octets.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_HEADER_TABLE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_HEADER_TABLE_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|long
|

a| [[quarkus-vertx-http_quarkus-management-limits-max-concurrent-streams]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-concurrent-streams[`quarkus.management.limits.max-concurrent-streams`]##

[.description]
--
Set SETTINGS_MAX_CONCURRENT_STREAMS HTTP/2 setting.

Indicates the maximum number of concurrent streams that the sender will allow. This limit is directional: it applies to the number of streams that the sender permits the receiver to create. Initially, there is no limit to this value. It is recommended that this value be no smaller than 100, to not unnecessarily limit parallelism.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_CONCURRENT_STREAMS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_CONCURRENT_STREAMS+++`
endif::add-copy-button-to-env-var[]
--
|long
|

a| [[quarkus-vertx-http_quarkus-management-limits-max-frame-size]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-frame-size[`quarkus.management.limits.max-frame-size`]##

[.description]
--
Set the SETTINGS_MAX_FRAME_SIZE HTTP/2 setting. Indicates the size of the largest frame payload that the sender is willing to receive, in octets. The initial value is `2^14` (16,384) octets.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_FRAME_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_FRAME_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx-http_quarkus-management-limits-max-header-list-size]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-max-header-list-size[`quarkus.management.limits.max-header-list-size`]##

[.description]
--
Set the SETTINGS_MAX_HEADER_LIST_SIZE HTTP/2 setting. This advisory setting informs a peer of the maximum size of header list that the sender is prepared to accept, in octets. The value is based on the uncompressed size of header fields, including the length of the name and value in octets plus an overhead of 32 octets for each header field. The default value is `8192`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_MAX_HEADER_LIST_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_MAX_HEADER_LIST_SIZE+++`
endif::add-copy-button-to-env-var[]
--
|long
|

a| [[quarkus-vertx-http_quarkus-management-limits-rst-flood-max-rst-frame-per-window]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-rst-flood-max-rst-frame-per-window[`quarkus.management.limits.rst-flood-max-rst-frame-per-window`]##

[.description]
--
Set the max number of RST frame allowed per time window, this is used to prevent link:https://github.com/netty/netty/security/advisories/GHSA-xpw8-rcwv-8f8p[HTTP/2 RST frame flood DDOS attacks]. The default value is `200`, setting zero or a negative value, disables flood protection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_RST_FLOOD_MAX_RST_FRAME_PER_WINDOW+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_RST_FLOOD_MAX_RST_FRAME_PER_WINDOW+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a| [[quarkus-vertx-http_quarkus-management-limits-rst-flood-window-duration]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-limits-rst-flood-window-duration[`quarkus.management.limits.rst-flood-window-duration`]##

[.description]
--
Set the duration of the time window when checking the max number of RST frames, this is used to prevent link:https://github.com/netty/netty/security/advisories/GHSA-xpw8-rcwv-8f8p[HTTP/2 RST frame flood DDOS attacks].. The default value is `30 s`, setting zero or a negative value, disables flood protection.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_LIMITS_RST_FLOOD_WINDOW_DURATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_LIMITS_RST_FLOOD_WINDOW_DURATION+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|

a| [[quarkus-vertx-http_quarkus-management-idle-timeout]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-idle-timeout[`quarkus.management.idle-timeout`]##

[.description]
--
Http connection idle timeout


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_IDLE_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_IDLE_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`30M`

a| [[quarkus-vertx-http_quarkus-management-body-handle-file-uploads]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-body-handle-file-uploads[`quarkus.management.body.handle-file-uploads`]##

[.description]
--
Whether the files sent using `multipart/form-data` will be stored locally.

If `true`, they will be stored in `quarkus.http.body-handler.uploads-directory` and will be made available via `io.vertx.ext.web.RoutingContext.fileUploads()`. Otherwise, the files sent using `multipart/form-data` will not be stored locally, and `io.vertx.ext.web.RoutingContext.fileUploads()` will always return an empty collection. Note that even with this option being set to `false`, the `multipart/form-data` requests will be accepted.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_HANDLE_FILE_UPLOADS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_HANDLE_FILE_UPLOADS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-vertx-http_quarkus-management-body-uploads-directory]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-body-uploads-directory[`quarkus.management.body.uploads-directory`]##

[.description]
--
The directory where the files sent using `multipart/form-data` should be stored.

Either an absolute path or a path relative to the current directory of the application process.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_UPLOADS_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_UPLOADS_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--
|string
|`${java.io.tmpdir}/uploads`

a| [[quarkus-vertx-http_quarkus-management-body-merge-form-attributes]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-body-merge-form-attributes[`quarkus.management.body.merge-form-attributes`]##

[.description]
--
Whether the form attributes should be added to the request parameters.

If `true`, the form attributes will be added to the request parameters; otherwise the form parameters will not be added to the request parameters


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_MERGE_FORM_ATTRIBUTES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_MERGE_FORM_ATTRIBUTES+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-vertx-http_quarkus-management-body-delete-uploaded-files-on-end]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-body-delete-uploaded-files-on-end[`quarkus.management.body.delete-uploaded-files-on-end`]##

[.description]
--
Whether the uploaded files should be removed after serving the request.

If `true` the uploaded files stored in `quarkus.http.body-handler.uploads-directory` will be removed after handling the request. Otherwise, the files will be left there forever.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_DELETE_UPLOADED_FILES_ON_END+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_DELETE_UPLOADED_FILES_ON_END+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`true`

a| [[quarkus-vertx-http_quarkus-management-body-preallocate-body-buffer]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-body-preallocate-body-buffer[`quarkus.management.body.preallocate-body-buffer`]##

[.description]
--
Whether the body buffer should pre-allocated based on the `Content-Length` header value.

If `true` the body buffer is pre-allocated according to the size read from the `Content-Length` header. Otherwise, the body buffer is pre-allocated to 1KB, and is resized dynamically


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_PREALLOCATE_BODY_BUFFER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_PREALLOCATE_BODY_BUFFER+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-body-multipart-file-content-types]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-body-multipart-file-content-types[`quarkus.management.body.multipart.file-content-types`]##

[.description]
--
A comma-separated list of `ContentType` to indicate whether a given multipart field should be handled as a file part. You can use this setting to force HTTP-based extensions to parse a message part as a file based on its content type. For now, this setting only works when using RESTEasy Reactive.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_BODY_MULTIPART_FILE_CONTENT_TYPES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_BODY_MULTIPART_FILE_CONTENT_TYPES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx-http_quarkus-management-accept-backlog]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-accept-backlog[`quarkus.management.accept-backlog`]##

[.description]
--
The accept backlog, this is how many connections can be waiting to be accepted before connections start being rejected


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_ACCEPT_BACKLOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_ACCEPT_BACKLOG+++`
endif::add-copy-button-to-env-var[]
--
|int
|`-1`

a| [[quarkus-vertx-http_quarkus-management-domain-socket]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-domain-socket[`quarkus.management.domain-socket`]##

[.description]
--
Path to a unix domain socket


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_DOMAIN_SOCKET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_DOMAIN_SOCKET+++`
endif::add-copy-button-to-env-var[]
--
|string
|`/var/run/io.quarkus.management.socket`

a| [[quarkus-vertx-http_quarkus-management-domain-socket-enabled]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-domain-socket-enabled[`quarkus.management.domain-socket-enabled`]##

[.description]
--
Enable listening to host:port


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_DOMAIN_SOCKET_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_DOMAIN_SOCKET_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-proxy-use-proxy-protocol]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-use-proxy-protocol[`quarkus.management.proxy.use-proxy-protocol`]##

[.description]
--
Set whether the server should use the HA `PROXY` protocol when serving requests from behind a proxy. (see the link:https://www.haproxy.org/download/1.8/doc/proxy-protocol.txt[PROXY Protocol]). When set to `true`, the remote address returned will be the one from the actual connecting client. If it is set to `false` (default), the remote address returned will be the one from the proxy.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_USE_PROXY_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_USE_PROXY_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-proxy-proxy-address-forwarding]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-proxy-address-forwarding[`quarkus.management.proxy.proxy-address-forwarding`]##

[.description]
--
If this is true then the address, scheme etc. will be set from headers forwarded by the proxy server, such as `X-Forwarded-For`. This should only be set if you are behind a proxy that sets these headers.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_PROXY_ADDRESS_FORWARDING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_PROXY_ADDRESS_FORWARDING+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-proxy-allow-forwarded]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-allow-forwarded[`quarkus.management.proxy.allow-forwarded`]##

[.description]
--
If this is true and proxy address forwarding is enabled then the standard `Forwarded` header will be used. In case the not standard `X-Forwarded-For` header is enabled and detected on HTTP requests, the standard header has the precedence. Activating this together with `quarkus.http.proxy.allow-x-forwarded` has security implications as clients can forge requests with a forwarded header that is not overwritten by the proxy. Therefore, proxies should strip unexpected `X-Forwarded` or `X-Forwarded-++*++` headers from the client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_ALLOW_FORWARDED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_ALLOW_FORWARDED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-proxy-allow-x-forwarded]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-allow-x-forwarded[`quarkus.management.proxy.allow-x-forwarded`]##

[.description]
--
If either this or `allow-forwarded` are true and proxy address forwarding is enabled then the not standard `Forwarded` header will be used. In case the standard `Forwarded` header is enabled and detected on HTTP requests, the standard header has the precedence. Activating this together with `quarkus.http.proxy.allow-forwarded` has security implications as clients can forge requests with a forwarded header that is not overwritten by the proxy. Therefore, proxies should strip unexpected `X-Forwarded` or `X-Forwarded-++*++` headers from the client.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_ALLOW_X_FORWARDED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_ALLOW_X_FORWARDED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-vertx-http_quarkus-management-proxy-enable-forwarded-host]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-enable-forwarded-host[`quarkus.management.proxy.enable-forwarded-host`]##

[.description]
--
Enable override the received request's host through a forwarded host header.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_ENABLE_FORWARDED_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_ENABLE_FORWARDED_HOST+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-proxy-forwarded-host-header]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-forwarded-host-header[`quarkus.management.proxy.forwarded-host-header`]##

[.description]
--
Configure the forwarded host header to be used if override enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_FORWARDED_HOST_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_FORWARDED_HOST_HEADER+++`
endif::add-copy-button-to-env-var[]
--
|string
|`X-Forwarded-Host`

a| [[quarkus-vertx-http_quarkus-management-proxy-enable-forwarded-prefix]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-enable-forwarded-prefix[`quarkus.management.proxy.enable-forwarded-prefix`]##

[.description]
--
Enable prefix the received request's path with a forwarded prefix header.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_ENABLE_FORWARDED_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_ENABLE_FORWARDED_PREFIX+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-proxy-forwarded-prefix-header]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-forwarded-prefix-header[`quarkus.management.proxy.forwarded-prefix-header`]##

[.description]
--
Configure the forwarded prefix header to be used if prefixing enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_FORWARDED_PREFIX_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_FORWARDED_PREFIX_HEADER+++`
endif::add-copy-button-to-env-var[]
--
|string
|`X-Forwarded-Prefix`

a| [[quarkus-vertx-http_quarkus-management-proxy-enable-trusted-proxy-header]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-enable-trusted-proxy-header[`quarkus.management.proxy.enable-trusted-proxy-header`]##

[.description]
--
Adds the header `X-Forwarded-Trusted-Proxy` if the request is forwarded by a trusted proxy. The value is `true` if the request is forwarded by a trusted proxy, otherwise `null`.

The forwarded parser detects forgery attempts and if the incoming request contains this header, it will be removed from the request.

The `X-Forwarded-Trusted-Proxy` header is a custom header, not part of the standard `Forwarded` header.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_ENABLE_TRUSTED_PROXY_HEADER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_ENABLE_TRUSTED_PROXY_HEADER+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-proxy-trusted-proxies]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-proxy-trusted-proxies[`quarkus.management.proxy.trusted-proxies`]##

[.description]
--
Configure the list of trusted proxy addresses. Received `Forwarded`, `X-Forwarded` or `X-Forwarded-++*++` headers from any other proxy address will be ignored. The trusted proxy address should be specified as the IP address (IPv4 or IPv6), hostname or Classless Inter-Domain Routing (CIDR) notation. Please note that Quarkus needs to perform DNS lookup for all hostnames during the request. For that reason, using hostnames is not recommended.

Examples of a socket address in the form of `host` or `host:port`:

 - `127.0.0.1:8084`
 - `++[++0:0:0:0:0:0:0:1++]++`
 - `++[++0:0:0:0:0:0:0:1++]++:8084`
 - `++[++::++]++`
 - `localhost`
 - `localhost:8084`

Examples of a CIDR notation:

 - `::/128`
 - `::/0`
 - `127.0.0.0/8`

Please bear in mind that IPv4 CIDR won't match request sent from the IPv6 address and the other way around.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_PROXY_TRUSTED_PROXIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_PROXY_TRUSTED_PROXIES+++`
endif::add-copy-button-to-env-var[]
--
|list of TrustedProxyCheckPart
|`All proxy addresses are trusted`

a| [[quarkus-vertx-http_quarkus-management-auth-permission-permissions-enabled]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-permission-permissions-enabled[`quarkus.management.auth.permission."permissions".enabled`]##

[.description]
--
Determines whether the entire permission set is enabled, or not. By default, if the permission set is defined, it is enabled.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a| [[quarkus-vertx-http_quarkus-management-auth-permission-permissions-policy]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-permission-permissions-policy[`quarkus.management.auth.permission."permissions".policy`]##

[.description]
--
The HTTP policy that this permission set is linked to. There are three built-in policies: permit, deny and authenticated. Role based policies can be defined, and extensions can add their own policies.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__POLICY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__POLICY+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-vertx-http_quarkus-management-auth-permission-permissions-methods]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-permission-permissions-methods[`quarkus.management.auth.permission."permissions".methods`]##

[.description]
--
The methods that this permission set applies to. If this is not set then they apply to all methods. Note that if a request matches any path from any permission set, but does not match the constraint due to the method not being listed then the request will be denied. Method specific permissions take precedence over matches that do not have any methods set. This means that for example if Quarkus is configured to allow GET and POST requests to /admin to and no other permissions are configured PUT requests to /admin will be denied.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__METHODS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx-http_quarkus-management-auth-permission-permissions-paths]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-permission-permissions-paths[`quarkus.management.auth.permission."permissions".paths`]##

[.description]
--
The paths that this permission check applies to. If the path ends in /++*++ then this is treated as a path prefix, otherwise it is treated as an exact match. Matches are done on a length basis, so the most specific path match takes precedence. If multiple permission sets match the same path then explicit methods matches take precedence over matches without methods set, otherwise the most restrictive permissions are applied.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__PATHS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__PATHS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx-http_quarkus-management-auth-permission-permissions-auth-mechanism]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-permission-permissions-auth-mechanism[`quarkus.management.auth.permission."permissions".auth-mechanism`]##

[.description]
--
Path specific authentication mechanism which must be used to authenticate a user. It needs to match `HttpCredentialTransport` authentication scheme such as 'basic', 'bearer', 'form', etc.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__AUTH_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__AUTH_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a| [[quarkus-vertx-http_quarkus-management-auth-permission-permissions-shared]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-permission-permissions-shared[`quarkus.management.auth.permission."permissions".shared`]##

[.description]
--
Indicates that this policy always applies to the matched paths in addition to the policy with a winning path. Avoid creating more than one shared policy to minimize the performance impact.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__SHARED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a| [[quarkus-vertx-http_quarkus-management-auth-permission-permissions-applies-to]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-permission-permissions-applies-to[`quarkus.management.auth.permission."permissions".applies-to`]##

[.description]
--
Whether permission check should be applied on all matching paths, or paths specific for the Jakarta REST resources.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__APPLIES_TO+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_PERMISSION__PERMISSIONS__APPLIES_TO+++`
endif::add-copy-button-to-env-var[]
--
a|tooltip:all[Apply on all matching paths.], tooltip:jaxrs[Declares that a permission check must only be applied on the Jakarta REST request paths. Use this option to delay the permission check if an authentication mechanism is chosen with an annotation on the matching Jakarta REST endpoint. This option must be set if the following REST endpoint annotations are used\:   - `io.quarkus.oidc.Tenant` annotation which selects an OIDC authentication mechanism with a tenant identifier  - `io.quarkus.vertx.http.runtime.security.annotation.BasicAuthentication` which selects the Basic authentication mechanism  - `io.quarkus.vertx.http.runtime.security.annotation.FormAuthentication` which selects the Form-based authentication mechanism  - `io.quarkus.vertx.http.runtime.security.annotation.MTLSAuthentication` which selects the mTLS authentication mechanism  - `io.quarkus.security.webauthn.WebAuthn` which selects the WebAuth authentication mechanism  - `io.quarkus.oidc.BearerTokenAuthentication` which selects the OpenID Connect Bearer token authentication mechanism  - `io.quarkus.oidc.AuthorizationCodeFlow` which selects the OpenID Connect Code authentication mechanism]
|tooltip:all[Apply on all matching paths.]

a| [[quarkus-vertx-http_quarkus-management-auth-policy-role-policy-roles-allowed]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-policy-role-policy-roles-allowed[`quarkus.management.auth.policy."role-policy".roles-allowed`]##

[.description]
--
The roles that are allowed to access resources protected by this policy. By default, access is allowed to any authenticated user.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__ROLES_ALLOWED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__ROLES_ALLOWED+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`**`

a| [[quarkus-vertx-http_quarkus-management-auth-policy-role-policy-roles-role-name]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-policy-role-policy-roles-role-name[`quarkus.management.auth.policy."role-policy".roles."role-name"`]##

[.description]
--
Add roles granted to the `SecurityIdentity` based on the roles that the `SecurityIdentity` already have. For example, the Quarkus OIDC extension can map roles from the verified JWT access token, and you may want to remap them to a deployment specific roles.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__ROLES__ROLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__ROLES__ROLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,List<String>>
|

a| [[quarkus-vertx-http_quarkus-management-auth-policy-role-policy-permissions-role-name]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-policy-role-policy-permissions-role-name[`quarkus.management.auth.policy."role-policy".permissions."role-name"`]##

[.description]
--
Permissions granted to the `SecurityIdentity` if this policy is applied successfully (the policy allows request to proceed) and the authenticated request has required role. For example, you can map permission `perm1` with actions `action1` and `action2` to role `admin` by setting `quarkus.http.auth.policy.role-policy1.permissions.admin=perm1:action1,perm1:action2` configuration property. Granted permissions are used for authorization with the `@PermissionsAllowed` annotation.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__PERMISSIONS__ROLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__PERMISSIONS__ROLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,List<String>>
|

a| [[quarkus-vertx-http_quarkus-management-auth-policy-role-policy-permission-class]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-auth-policy-role-policy-permission-class[`quarkus.management.auth.policy."role-policy".permission-class`]##

[.description]
--
Permissions granted by this policy will be created with a `java.security.Permission` implementation specified by this configuration property. The permission class must declare exactly one constructor that accepts permission name (`String`) or permission name and actions (`String`, `String++[]++`). Permission class must be registered for reflection if you run your application in a native mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__PERMISSION_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_AUTH_POLICY__ROLE_POLICY__PERMISSION_CLASS+++`
endif::add-copy-button-to-env-var[]
--
|string
|`io.quarkus.security.StringPermission`

a| [[quarkus-vertx-http_quarkus-management-header-header-path]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-header-header-path[`quarkus.management.header."header".path`]##

[.description]
--
The path this header should be applied


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_HEADER__HEADER__PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_HEADER__HEADER__PATH+++`
endif::add-copy-button-to-env-var[]
--
|string
|`/*`

a| [[quarkus-vertx-http_quarkus-management-header-header-value]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-header-header-value[`quarkus.management.header."header".value`]##

[.description]
--
The value for this header configuration


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_HEADER__HEADER__VALUE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_HEADER__HEADER__VALUE+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-vertx-http_quarkus-management-header-header-methods]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-header-header-methods[`quarkus.management.header."header".methods`]##

[.description]
--
The HTTP methods for this header configuration


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_HEADER__HEADER__METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_HEADER__HEADER__METHODS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx-http_quarkus-management-filter-filter-matches]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-filter-filter-matches[`quarkus.management.filter."filter".matches`]##

[.description]
--
A regular expression for the paths matching this configuration


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_FILTER__FILTER__MATCHES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_FILTER__FILTER__MATCHES+++`
endif::add-copy-button-to-env-var[]
--
|string
|required icon:exclamation-circle[title=Configuration property is required]

a| [[quarkus-vertx-http_quarkus-management-filter-filter-header-header-name]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-filter-filter-header-header-name[`quarkus.management.filter."filter".header."header-name"`]##

[.description]
--
Additional HTTP Headers always sent in the response


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_FILTER__FILTER__HEADER__HEADER_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_FILTER__FILTER__HEADER__HEADER_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a| [[quarkus-vertx-http_quarkus-management-filter-filter-methods]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-filter-filter-methods[`quarkus.management.filter."filter".methods`]##

[.description]
--
The HTTP methods for this path configuration


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_FILTER__FILTER__METHODS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_FILTER__FILTER__METHODS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a| [[quarkus-vertx-http_quarkus-management-filter-filter-order]] [.property-path]##link:#quarkus-vertx-http_quarkus-management-filter-filter-order[`quarkus.management.filter."filter".order`]##

[.description]
--
Order in which this path config is applied. Higher priority takes precedence


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_MANAGEMENT_FILTER__FILTER__ORDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_MANAGEMENT_FILTER__FILTER__ORDER+++`
endif::add-copy-button-to-env-var[]
--
|int
|

|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-vertx-http_quarkus-management]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
ifndef::no-memory-size-note[]
[NOTE]
[id=memory-size-note-anchor-quarkus-vertx-http_quarkus-management]
.About the MemorySize format
====
A size configuration option recognizes strings in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.

If no suffix is given, assume bytes.
====
ifndef::no-memory-size-note[]

:!summaryTableId: